# cli-pulse-desktop

./: .gitignore  CHANGELOG.md  HANDOFF_PROMPT_2026-05-05_v0.4.20_for_new_local_session.md  HANDOFF_PROMPT_2026-05-06_v0.5.4_v0.5.5_v0.5.6_post_parity_trio.md  HANDOFF_PROMPT_2026-05-07_v0.8.0_conpty_managed_sessions.md  PROJECT_DEV_PLAN_2026-05-02_v0.2.14_helper_sync_completeness.md  PROJECT_DEV_PLAN_2026-05-02_v0.2.14_quick_fixes.md  PROJECT_DEV_PLAN_2026-05-02_v0.3.0_otp_login.md  PROJECT_DEV_PLAN_2026-05-02_v0.3.4_dashboard_parity.md  PROJECT_DEV_PLAN_2026-05-02_v0.4.0_local_quota.md  PROJECT_DEV_PLAN_2026-05-02_v0.4.3_multi_provider_quota.md  PROJECT_DEV_PLAN_2026-05-03_v0.3.1_multi_device_daily_usage.md  PROJECT_DEV_PLAN_2026-05-04_v0.4.14_to_v0.4.16_backlog_cleanup.md  PROJECT_DEV_PLAN_2026-05-04_v0.4.6_settings_ui.md  PROJECT_DEV_PLAN_2026-05-05_desktop_mac_parity.md  PROJECT_DEV_PLAN_2026-05-05_desktop_mac_parity_v2.md  PROJECT_DEV_PLAN_2026-05-05_v0.4.19_polish.md  PROJECT_DEV_PLAN_2026-05-05_v0.4.20_health_visibility.md  PROJECT_DEV_PLAN_2026-05-05_v0.5.3_v0.5.4_polish_and_onboarding.md  PROJECT_DEV_PLAN_2026-05-05_v0.5.4_v0.5.5_v0.5.6_post_parity_trio.md  PROJECT_DEV_PLAN_2026-05-06_v0.6.0_remote_approvals_view.md  PROJECT_DEV_PLAN_2026-05-07_v0.8.0_conpty_managed_sessions.md  PROJECT_DEV_PLAN_2026-05-08_v0.9-v0.10_post_incident_sprint_v2.md  PROJECT_DEV_PLAN_2026-05-08_v0.9-v0.11_post_incident_sprint.md  PROJECT_DEV_PLAN_2026-06-20_macos_parity.md  PROJECT_DEV_PLAN_2026-07-04_windows_parity.md  PROJECT_FIX_2026-04-25_v0.2.2_timezone.md  PROJECT_FIX_2026-04-26_v0.2.3_test_tz_dependency.md  PROJECT_FIX_2026-04-27_v0.2.9_crlf_offset.md  PROJECT_FIX_2026-05-01_v0.2.10_default_run.md  PROJECT_FIX_2026-05-01_v0.2.11_sessions_white_screen.md  README.md  RELEASE.md  VM_SMOKE_v0.8.1.md  VM_VERIFY_CHUNKS_2026-05-07_v0.8.0.md  VM_VERIFY_PROMPT_2026-05-07_v0.8.0.md  VM_VERIFY_PROMPT_2026-05-07_v0.8.0_compact.md  index.html  package-lock.json  package.json  (+1 more)
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  release.yml
scripts/: VM_SMOKE_BRIEF.md  VM_SMOKE_INSTRUCTIONS.md  VM_VERIFY_v0.10.0.md  ci-smoke-launch.ps1  ci-smoke-launch.sh  install-git-hooks.sh  vm-smoke-full.ps1  vm-smoke-launch.ps1  vm-verify-terminal.ps1
scripts/git-hooks/: pre-push
src/: App.css  App.tsx  ErrorBoundary.tsx  i18n.test.ts  i18n.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: alerts.rs  auth.rs  cache.rs  config.rs  cost_forecast.rs  crash_recovery.rs  creds.rs  cwd_hmac.rs  diagnostic_bundle.rs  fx.rs  install_hook.rs  keychain.rs  lib.rs  machine.rs  main.rs  notify.rs  paths.rs  pricing.rs  provider_creds.rs  quota.rs  redaction.rs  risk.rs  scanner.rs  sentry_init.rs  service_status.rs  sessions.rs  smoke.rs  supabase.rs  terminal.rs  top_projects.rs  tray.rs  wsl.rs
src-tauri/src/quota/: abacus.rs  alibaba.rs  augment.rs  claude.rs  claude_refresh.rs  codebuff.rs  codex.rs  copilot.rs  crof.rs  cursor.rs  deepgram.rs  deepseek.rs  elevenlabs.rs  gemini.rs  gemini_refresh.rs  glm.rs  grok.rs  groq.rs  kilo.rs  kimi.rs  kimik2.rs  manus.rs  minimax.rs  mistral.rs  mod.rs  moonshot.rs  ollama.rs  openai_admin.rs  openrouter.rs  perplexity.rs  stepfun.rs  t3chat.rs  venice.rs  volcano.rs  warp.rs  zai.rs
src-tauri/src/remote/: agent.rs  events.rs  log.rs  mod.rs  transport.rs
src-tauri/tests/: scanner_integration.rs
src/components/: LocalTerminal.tsx
src/lib/: activity.test.ts  activity.ts  autoExport.test.ts  autoExport.ts  compare.test.ts  compare.ts  comparePrefs.test.ts  comparePrefs.ts  dateRange.test.ts  dateRange.ts  format.test.ts  format.ts  money.test.ts  money.ts  pace.test.ts  pace.ts  providerTheme.test.ts  providerTheme.ts  providerVisibility.test.ts  providerVisibility.ts  quotaMarkers.test.ts  quotaMarkers.ts  windowPrefs.test.ts  windowPrefs.ts
src/locales/: en.json  ja.json  zh-CN.json
src/test/: setup.ts
