[package]
name = "cli-pulse-desktop"
version = "0.3.5"
description = "CLI Pulse — track AI CLI usage and cost across Windows and Linux"
authors = ["Jason Ye <yyyyy.yeyuhe@gmail.com>"]
edition = "2021"
rust-version = "1.88"
# WHY: src/bin/{scan_cli,sessions_smoke}.rs auto-register as cargo bins.
# Without `default-run`, `cargo tauri build` cannot disambiguate which binary
# to bundle and (across all v0.1.0–v0.2.9 releases) silently picked
# `scan_cli` for NSIS/.deb/.rpm — shipping diagnostic-only installers with
# no GUI. AppImage was unaffected because its bundler resolves the binary
# differently. See PROJECT_FIX_2026-05-01_v0.2.10_default_run.md.
default-run = "cli-pulse-desktop"

[lib]
name = "cli_pulse_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# `devtools` enables Ctrl+Shift+I / F12 to open Edge WebView2 / WebKit
# devtools at runtime in release builds. The default release config
# disables them, which made debugging the v0.2.10 Sessions-tab white-screen
# crash on Windows much harder than it needed to be (no console, no JS
# stack, no DOM inspector). Bundle size cost: negligible (the runtime
# already includes the devtools shell on Windows; we just unblock the
# keyboard hotkey).
tauri = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
# v0.3.4 — file logging at the OS-conventional log dir + single-instance
# enforcement so a second launch focuses the existing window instead of
# spawning a duplicate (user-flagged 2026-05-02).
tauri-plugin-log = { version = "2", features = ["colored"] }
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"
regex = "1"
walkdir = "2"
once_cell = "1"
log = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }
uuid = { version = "1", features = ["v4"] }
sysinfo = "0.32"
sentry = { version = "0.34", default-features = false, features = ["backtrace", "contexts", "panic", "reqwest", "rustls"] }
# v0.3.0 — direct email OTP sign-in. keyring stores the refresh token in
# the OS-native credential store; whoami suggests a default device name
# from the system hostname.
# NOTE the linux-native-sync-persistent feature: uses libsecret with
# blocking calls (matches our sync API), and the "persistent" suffix
# requests collection-unlock prompts only once (vs every call). On
# Linux without libsecret, the keyring crate returns NoEntry / PlatformFailure
# and we fail-closed via a clear UI error.
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native-sync-persistent"] }
whoami = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
