[package]
name = "cli-pulse-desktop"
version = "0.8.0"
description = "CLI Pulse — track AI CLI usage and cost across Windows and Linux"
authors = ["Jason Ye <yyyyy.yeyuhe@gmail.com>"]
edition = "2021"
rust-version = "1.88"
# WHY: src/bin/{scan_cli,sessions_smoke}.rs auto-register as cargo bins.
# Without `default-run`, `cargo tauri build` cannot disambiguate which binary
# to bundle and (across all v0.1.0–v0.2.9 releases) silently picked
# `scan_cli` for NSIS/.deb/.rpm — shipping diagnostic-only installers with
# no GUI. AppImage was unaffected because its bundler resolves the binary
# differently. See PROJECT_FIX_2026-05-01_v0.2.10_default_run.md.
default-run = "cli-pulse-desktop"

[lib]
name = "cli_pulse_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# `devtools` enables Ctrl+Shift+I / F12 to open Edge WebView2 / WebKit
# devtools at runtime in release builds. The default release config
# disables them, which made debugging the v0.2.10 Sessions-tab white-screen
# crash on Windows much harder than it needed to be (no console, no JS
# stack, no DOM inspector). Bundle size cost: negligible (the runtime
# already includes the devtools shell on Windows; we just unblock the
# keyboard hotkey).
tauri = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
# v0.3.4 — file logging at the OS-conventional log dir + single-instance
# enforcement so a second launch focuses the existing window instead of
# spawning a duplicate (user-flagged 2026-05-02).
tauri-plugin-log = { version = "2", features = ["colored"] }
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"
regex = "1"
walkdir = "2"
once_cell = "1"
log = "0.4"
# v0.4.6 — atomic write for provider_creds.json (write-temp + persist).
tempfile = "3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }
uuid = { version = "1", features = ["v4"] }
sysinfo = "0.32"
sentry = { version = "0.34", default-features = false, features = ["backtrace", "contexts", "panic", "reqwest", "rustls"] }
# v0.3.0 — direct email OTP sign-in. keyring stores the refresh token in
# the OS-native credential store; whoami suggests a default device name
# from the system hostname.
# NOTE the linux-native-sync-persistent feature: uses libsecret with
# blocking calls (matches our sync API), and the "persistent" suffix
# requests collection-unlock prompts only once (vs every call). On
# Linux without libsecret, the keyring crate returns NoEntry / PlatformFailure
# and we fail-closed via a clear UI error.
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native-sync-persistent"] }
whoami = "1"
# v0.7.0 — Rust port of the macOS team's helper/redaction.py +
# helper/remote_hook.py + helper/provider_adapters/claude.py, used by
# the Windows-side hook-emission binary. HMAC-SHA256 of the full cwd
# path so the server's "same project" matching works without uploading
# the path itself. Both crates are RustCrypto, audited, no_std-compat,
# zero-dep beyond their own subsystem.
hmac = "0.12"
sha2 = "0.10"
# v0.7.0 — proper CSPRNG for the cwd-hmac per-user secret. Already in
# the build graph as a transitive dep of `uuid` and `keyring`; adding
# it explicitly costs zero build time and lets us avoid the partial-
# entropy reduction caused by uuid::v4's fixed version/variant bits
# (Gemini 3.1 Pro v0.7.0 review P2).
getrandom = "0.2"
# v0.8.0 — ConPTY managed-session local host. Used by VS Code, wezterm,
# alacritty. Wraps Win10+ pseudoconsole + POSIX openpty under a single
# trait. We use it only for the Windows path; on Linux it falls back to
# POSIX openpty but Linux is also a supported host. ~200 KB binary cost.
portable-pty = "0.9"

# v0.8.0 — Job Object FFI for orphan auto-cleanup on Windows. When the
# desktop process exits / crashes, the kernel kills assigned children
# the same instant. Replaces the heuristic process-walking approach
# from the v0.8.0 plan v1 (Gemini 3.1 Pro P1: kernel-level guarantee
# is strictly better than name-matching heuristics). Already a
# transitive dep via `keyring` / `getrandom`; adding it explicitly is
# zero binary cost.
[target.'cfg(windows)'.dependencies]
# `Win32_Security` is required because `CreateJobObjectW`'s signature
# references `*const SECURITY_ATTRIBUTES`; windows-sys 0.59 cfg-gates
# the function on that feature even though we pass null. Without it,
# the import fails with E0432 "unresolved import" — caught by the
# v0.8.0 first-push CI run, see commit history.
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
] }

[dev-dependencies]
# v0.4.20 — `start_paused = true` on `#[tokio::test]` advances virtual
# time when all tasks block. Without it, the manual-refresh tick-reset
# tests in lib.rs would have to wait the full SYNC_INTERVAL (120 s
# real wall-clock) per case.
tokio = { version = "1", features = ["test-util"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
